--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.7",
+    "framer-motion": "^12.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
