--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://niksedov24.github.io/react-portfolio",
+  "homepage": "https://niksedov24.github.io/reactPortfolio",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
